<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/RadioGroup">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/Console"
                android:id="@+id/ConsoleVivod"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/Text"
                android:id="@+id/TextVivod"/>
        </RadioGroup>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/TutText"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/Array_vivod"
            android:id="@+id/Array"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/LPU"
            android:id="@+id/LPU"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/LPA"
            android:id="@+id/LPA"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/Product_Price"
            android:id="@+id/PP"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/bookPRICEpagecount"
            android:id="@+id/BPE"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/ProductList"
            android:id="@+id/PList"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/ProductAdd"
            android:id="@+id/PA"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/ProductListBTN"
            android:id="@+id/btnProudctList"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>